2007-09-24  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb-trail.c (hildon_bread_crumb_trail_push_icon):
	fix the name of the function in the docs.

2007-09-21  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.16-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog: Updating.

2007-09-21  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/hildon-banner-long-example.c: Adding a test-case for long
	hildon banner.

	* src/hildon-find-toolbar.c: Fixing the get_last_index function.

2007-09-21  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-color-chooser-dialog.c:
	* src/hildon-color-chooser.c:
	* src/hildon-font-selection-dialog.c: Adding two patches by Tommi to fix
	memory leaks in font selector and color selector. Fixes: NB#70499 and
	NB#70474.

2007-09-20  Johan Bilien  <johan.bilien@nokia.com> 

	* src/hildon-helper.c: Fixed the leak of the a GList. Fixes: NB#70273.

2007-09-18  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-code-dialog.c: Making the hardcoded WIDTH/HEIGHT values a
	little bit bigger. Fixes: #NB63694.

2007-09-17  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.15-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog: Updating.

2007-09-14  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* doc/Makefile.am:
	* doc/hildon-docs.sgml:
	* doc/images/bread-crumb-trail.png:
	* doc/images/calendar-popup.png:
	* doc/images/caption.png:
	* doc/images/code-dialog.png:
	* doc/images/color-button.png:
	* doc/images/color-chooser-dialog.png:
	* doc/images/color-chooser.png:
	* doc/images/controlbar.png:
	* doc/images/date-editor.png:
	* doc/images/font-selection-dialog.png:
	* doc/images/get-password-dialog.png:
	* doc/images/hvolumebar.png:
	* doc/images/login-dialog.png:
	* doc/images/note.png:
	* doc/images/number-editor.png:
	* doc/images/range-editor.png:
	* doc/images/seekbar.png:
	* doc/images/set-password-dialog.png: